// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProtocolCard snapshot > protocol card matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-dy5pm"
    data-testid="protocol-card"
  >
    <div
      class="MuiBox-root css-1n3ldtq"
    >
      <div
        class="MuiBox-root css-716jf3"
      >
        <img
          alt="morpho"
          class="css-12y411v"
          height="56"
          src="https://strapi.jumper.exchange/uploads/morpho_eef0686ee3_2e4b8e06a6.png"
          width="56"
        />
        <p
          class="MuiTypography-root MuiTypography-body1 css-15kxehp-MuiTypography-root"
        >
          morpho
        </p>
      </div>
    </div>
    <div
      class="MuiBox-root css-pqmg6p"
    >
      <div
        class="MuiBox-root css-15r232g"
      >
        <div
          class="MuiStack-root css-h176g1-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-titleMedium css-leioi1-MuiTypography-root"
          >
            Moonwell Flagship USDC on base
          </span>
        </div>
        <div
          class="MuiStack-root css-qzuiar-MuiStack-root"
        >
          <div
            class="badge-container MuiBox-root css-8wpak"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
            >
              Staking
            </p>
          </div>
          <div
            class="badge-container MuiBox-root css-8wpak"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
            >
              Earn
            </p>
          </div>
        </div>
      </div>
      <p
        class="MuiTypography-root MuiTypography-bodyMediumParagraph css-1cwb1i5-MuiTypography-root"
      >
        Development Value - This value is used in our e2e tests workflows!!!

Lenders earn yield from interest paid by borrowers. Borrowers deposit collateral assets into Morpho's credit markets and borrow loans against their collateral. For detail on this vault’s curator and risk parameters, see [link](https://a...
         
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-xtrp8g-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          earn.actions.seeMore
        </button>
      </p>
    </div>
  </div>
</div>
`;

exports[`ProtocolCard snapshot > protocol card with badge matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-dy5pm"
    data-testid="protocol-card"
  >
    <div
      class="MuiBox-root css-1n3ldtq"
    >
      <div
        class="MuiBox-root css-1f6e6uc"
      >
        <div
          class="badge-container MuiBox-root css-4ejq0z"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
          >
            New
          </p>
        </div>
      </div>
      <div
        class="MuiBox-root css-716jf3"
      >
        <img
          alt="morpho"
          class="css-12y411v"
          height="56"
          src="https://strapi.jumper.exchange/uploads/morpho_eef0686ee3_2e4b8e06a6.png"
          width="56"
        />
        <p
          class="MuiTypography-root MuiTypography-body1 css-15kxehp-MuiTypography-root"
        >
          morpho
        </p>
      </div>
    </div>
    <div
      class="MuiBox-root css-pqmg6p"
    >
      <div
        class="MuiBox-root css-15r232g"
      >
        <div
          class="MuiStack-root css-h176g1-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-titleMedium css-leioi1-MuiTypography-root"
          >
            Moonwell Flagship USDC on base
          </span>
        </div>
        <div
          class="MuiStack-root css-qzuiar-MuiStack-root"
        >
          <div
            class="badge-container MuiBox-root css-8wpak"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
            >
              Staking
            </p>
          </div>
          <div
            class="badge-container MuiBox-root css-8wpak"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
            >
              Earn
            </p>
          </div>
        </div>
      </div>
      <p
        class="MuiTypography-root MuiTypography-bodyMediumParagraph css-1cwb1i5-MuiTypography-root"
      >
        Development Value - This value is used in our e2e tests workflows!!!

Lenders earn yield from interest paid by borrowers. Borrowers deposit collateral assets into Morpho's credit markets and borrow loans against their collateral. For detail on this vault’s curator and risk parameters, see [link](https://a...
         
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-xtrp8g-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          earn.actions.seeMore
        </button>
      </p>
    </div>
  </div>
</div>
`;

exports[`ProtocolCard snapshot > protocol card with loading matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-dy5pm"
  >
    <div
      class="MuiBox-root css-1yz1h9d"
    />
    <div
      class="MuiBox-root css-pqmg6p"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-1ohqa4v-MuiSkeleton-root"
      />
      <div
        class="MuiBox-root css-1a7ncva"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-vxtztc-MuiSkeleton-root"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-vxtztc-MuiSkeleton-root"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-rounded MuiSkeleton-pulse css-1c9d3f5-MuiSkeleton-root"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ProtocolCard snapshot > protocol card with long title matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-dy5pm"
    data-testid="protocol-card"
  >
    <div
      class="MuiBox-root css-1n3ldtq"
    >
      <div
        class="MuiBox-root css-716jf3"
      >
        <img
          alt="this is a very long protocol name that should be truncated"
          class="css-12y411v"
          height="56"
          src="https://strapi.jumper.exchange/uploads/morpho_eef0686ee3_2e4b8e06a6.png"
          width="56"
        />
        <p
          class="MuiTypography-root MuiTypography-body1 css-15kxehp-MuiTypography-root"
        >
          this is a very long protocol name that should be truncated
        </p>
      </div>
    </div>
    <div
      class="MuiBox-root css-pqmg6p"
    >
      <div
        class="MuiBox-root css-15r232g"
      >
        <div
          class="MuiStack-root css-h176g1-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-titleMedium css-leioi1-MuiTypography-root"
          >
            Moonwell Flagship USDC on base
          </span>
        </div>
        <div
          class="MuiStack-root css-qzuiar-MuiStack-root"
        >
          <div
            class="badge-container MuiBox-root css-8wpak"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
            >
              Staking
            </p>
          </div>
          <div
            class="badge-container MuiBox-root css-8wpak"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-jc816d-MuiTypography-root"
            >
              Earn
            </p>
          </div>
        </div>
      </div>
      <p
        class="MuiTypography-root MuiTypography-bodyMediumParagraph css-1cwb1i5-MuiTypography-root"
      >
        Development Value - This value is used in our e2e tests workflows!!!

Lenders earn yield from interest paid by borrowers. Borrowers deposit collateral assets into Morpho's credit markets and borrow loans against their collateral. For detail on this vault’s curator and risk parameters, see [link](https://a...
         
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-xtrp8g-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          earn.actions.seeMore
        </button>
      </p>
    </div>
  </div>
</div>
`;
